Bump source and target JDK version to 13