@@ -9,8 +9,8 @@ plugins {
 group 'razesoldier'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 12
-targetCompatibility = 12
+sourceCompatibility = 13
+targetCompatibility = 13
 
 repositories {
     mavenCentral()
@@ -45,47 +45,10 @@ compileJava {
     }
 }
 
-compileTestJava {
-    inputs.property("moduleName", moduleName)
-    doFirst {
-        options.compilerArgs = [
-            '--module-path', classpath.asPath,
-            '--add-modules', 'org.junit.jupiter',
-            '--add-reads', "$moduleName=org.junit.jupiter",
-            '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
-        ]
-        classpath = files()
-    }
-}
-
 test {
     dependsOn copyTestResource
     useJUnitPlatform()
-    inputs.property("moduleName", moduleName)
-    doFirst {
-        jvmArgs = [
-            '--module-path', classpath.asPath,
-            '--add-modules', 'ALL-MODULE-PATH',
-            '--add-reads', "$moduleName=org.junit.jupiter,org.junit.jupiter.api,org.junit.jupiter.params",
-            '--add-opens', "razesoldier.epub/razesoldier.epub.reader=org.junit.platform.commons",
-            '--add-opens', "razesoldier.epub/razesoldier.epub.cli=org.junit.platform.commons",
-            '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
-        ]
-        classpath = files()
-    }
 }
-
-run {
-    inputs.property("moduleName", moduleName)
-    doFirst {
-        jvmArgs = [
-            '--module-path', classpath.asPath,
-            '--module', mainClassName
-        ]
-        classpath = files()
-    }
-}
-
 
 startScripts {
     inputs.property("moduleName", moduleName)
@@ -118,7 +81,6 @@ afterEvaluate {
         }
     }
 }
-
 
 jlink {
     launcher {
